--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <h1>K53</h1>
             <p>Learner's License Test </p>
             <p>Multiple Choice Questions</p>
-            <a href="./home_images/home.html" class="btn">Free K53 Learners License  🚦</a> <br> <br>
-			<a href="./K53_Sign_Test/download.html" class="btn">Download MEMO</a>
+            <a href="./home_images/home.html" class="btn">Free K53 Learners License  🚦🛣️</a> <br> <br>
+			<a href="./K53_Sign_Test/download.html" class="btn">Download MEMO 🚦🛣️</a>
 			<a href="./bursaries" class="btn">Bursaries 🎓</a>
 			<a href="./universities" class="btn">Open TVETs and Universities 👩‍🎓</a>
 			<a href="./jobs" class="btn">Jobs 👷‍♂️</a>
@@ -118,6 +118,7 @@
 
   installClose.addEventListener('click', hideMyInstallPromotion);
 </script>
+
 
 
 
