--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <h1>K53</h1>
             <p>Learner's License Test </p>
             <p>Multiple Choice Questions</p>
+			<p>Now with links to Bursaries 🎓, Open TVETs and Universities 👩‍🎓 and Jobs 👷‍♂️</p>
             <a href="./home_images/home.html" class="btn">Free K53 Learners License  🚦🛣️</a> <br> <br>
 			<a href="./K53_Sign_Test/download.html" class="btn">Download MEMO 🚦🛣️</a>
 			<a href="./bursaries" class="btn">Bursaries 🎓</a>
@@ -118,6 +119,7 @@
 
   installClose.addEventListener('click', hideMyInstallPromotion);
 </script>
+
 
 
 
