--- a/index.html
+++ b/index.html
@@ -48,11 +48,10 @@
             <h1>K53</h1>
             <p>Learner's License Test </p>
             <p>Multiple Choice Questions</p>
-			<p>Now with links to Bursaries 🎓, Open TVETs and Universities 👩‍🎓 and Jobs 👷‍♂️</p>
             <a href="./home_images/home.html" class="btn">Free K53 Learners License  🚦🛣️</a> <br> <br>
-			<a href="./K53_Sign_Test/download.html" class="btn">Download MEMO 🚦🛣️</a>
-			<a href="./bursaries" class="btn">Bursaries 🎓</a>
-			<a href="./universities" class="btn">Open TVETs and Universities 👩‍🎓</a>
+			<a href="./K53_Sign_Test/download.html" class="btn">Download MEMO 🚦🛣️</a><br> <br>
+			<a href="./bursaries" class="btn">Bursaries 🎓</a><br> <br>
+			<a href="./universities" class="btn">Open TVETs and Universities 👩‍🎓</a><br> <br>
 			<a href="./jobs" class="btn">Jobs 👷‍♂️</a>
 			
         </div>
@@ -119,6 +118,7 @@
 
   installClose.addEventListener('click', hideMyInstallPromotion);
 </script>
+
 
 
 
