--- a/home_images/home.html
+++ b/home_images/home.html
@@ -105,10 +105,10 @@
 			</div>
 
 		</div>	
-
-				<a href="./bursaries" class="btn">Bursaries 🎓</a> <a href="https://www.freek53.xyz/bursaries/" target="_blank" rel="noopener"> Share Bursaries on WhatsApp </a> <br> <br>
-			<a href="./universities" class="btn">Open TVETs and Universities 👩‍🎓</a>  <a href="https://www.freek53.xyz/universities/" target="_blank" rel="noopener"> Share Open TVETs and Universities on WhatsApp </a> <br> <br>
-			<a href="./jobs" class="btn">Jobs 👷‍♂️</a>  <a href="https://www.freek53.xyz/jobs/" target="_blank" rel="noopener"> Share Jobs on WhatsApp </a> 
+<br> <br>
+				<a href="./bursaries" class="btn">Bursaries 🎓</a> <a href="https://www.freek53.xyz/bursaries/" target="_blank" rel="noopener"> Share Bursaries on WhatsApp 🦈</a> <br> <br>
+			<a href="./universities" class="btn">Open TVETs and Universities 👩‍🎓</a>  <a href="https://www.freek53.xyz/universities/" target="_blank" rel="noopener"> Share Open TVETs and Universities on WhatsApp 🦈</a> <br> <br>
+			<a href="./jobs" class="btn">Jobs 👷‍♂️</a>  <a href="https://www.freek53.xyz/jobs/" target="_blank" rel="noopener"> Share Jobs on WhatsApp 🦈 </a> <br> <br>
 
 
 
@@ -262,6 +262,7 @@ if ('serviceWorker' in navigator) {
  				})
 	}
  </script>
+
 
 
 
