--- a/home_images/home.html
+++ b/home_images/home.html
@@ -106,9 +106,9 @@
 
 		</div>	
 <br> <br>
-				<a href="./bursaries" class="btn">Bursaries 🎓</a> <a href="https://www.freek53.xyz/bursaries/" target="_blank" rel="noopener" class="btn"> Share Bursaries on WhatsApp 🦈</a> <br> <br>
-			<a href="./universities" class="btn">Open TVETs and Universities 👩‍🎓</a>  <a href="https://www.freek53.xyz/universities/" target="_blank" rel="noopener" class="btn"> Share Open TVETs and Universities on WhatsApp 🦈</a> <br> <br>
-			<a href="./jobs" class="btn">Jobs 👷‍♂️</a>  <a href="https://www.freek53.xyz/jobs/" target="_blank" rel="noopener" class="btn"> Share Jobs on WhatsApp 🦈 </a> <br> <br>
+				<a href="./bursaries" class="btn">Bursaries 🎓</a> <a href="https://www.freek53.xyz/bursaries/" target="_blank" rel="noopener" class="btn"> Share  🦈</a> <br> <br>
+			<a href="./universities" class="btn">Open TVETs and Universities 👩‍🎓</a>  <a href="https://www.freek53.xyz/universities/" target="_blank" rel="noopener" class="btn"> Share 🦈</a> <br> <br>
+			<a href="./jobs" class="btn">Jobs 👷‍♂️</a>  <a href="https://www.freek53.xyz/jobs/" target="_blank" rel="noopener" class="btn"> Share  🦈 </a> <br> <br>
 
 
 
@@ -128,7 +128,7 @@
 </script>
 
 
-<a href="#" class="btn">"Compare Discovery car insurance and Santam premiums online to secure affordable coverage, fast claims, and peace of mind while protecting your vehicle. 🚗🛡️💸",
+<a href="#" style="color: white; border: 1px white solid; margin: 5px;">"Compare Discovery car insurance and Santam premiums online to secure affordable coverage, fast claims, and peace of mind while protecting your vehicle. 🚗🛡️💸",
 "Apply for a personal loan with FNB or Standard Bank after comparing interest rates and fees to choose the best repayment plan. 🏦💰📄",
 "Choose medical aid from Discovery or Momentum for comprehensive hospital coverage, chronic care, and wellness benefits to protect your family long term. 🏥💊👨‍👩‍👧‍👦",
 "Compare life insurance options at Old Mutual and Hollard to ensure income replacement, dependents’ financial security, and reliable claim payouts. ❤️🛡️📄",
@@ -174,7 +174,7 @@
 
 
 
-<a href="#" class="btn">
+<a href="#" style="color: white; border: 1px white solid; margin: 5px;">
 "Choose insurers offering roadside assistance such as Santam or OUTsurance for safety and convenience on South African roads. 🚗🛠️🛡️",
 "Use bond originators to compare multiple Nedbank and FNB mortgage offers without submitting separate applications. 🏠🏦📄",
 "Select medical aid plans with chronic benefits from Discovery or Momentum to protect long-term family healthcare. 🏥💊💰",
@@ -212,7 +212,7 @@
 </script>
 
 
-<a href="#" class="btn">
+<a href="#" style="color: white; border: 1px white solid; margin: 5px;">
 "Compare bank loan approval times from Nedbank or FNB to meet urgent financing needs efficiently. 🏦⏱️💰",
 "Select comprehensive insurance from Santam or OUTsurance to protect assets against unexpected financial loss. 🛡️🏡🚗",
 "Choose reputable banks like Standard Bank or Capitec for transparent lending and compliance. 🏦✅📄",
@@ -312,6 +312,7 @@ if ('serviceWorker' in navigator) {
  				})
 	}
  </script>
+
 
 
 
