--- a/home_images/home.html
+++ b/home_images/home.html
@@ -106,9 +106,11 @@
 
 		</div>	
 <br> <br>
+	<div class="btext">
 				<a href="./bursaries" class="btn">Bursaries 🎓</a> <a href="https://www.freek53.xyz/bursaries/" target="_blank" rel="noopener" class="btn"> Share  🦈</a> <br> <br>
 			<a href="./universities" class="btn">Open TVETs and Universities 👩‍🎓</a>  <a href="https://www.freek53.xyz/universities/" target="_blank" rel="noopener" class="btn"> Share 🦈</a> <br> <br>
 			<a href="./jobs" class="btn">Jobs 👷‍♂️</a>  <a href="https://www.freek53.xyz/jobs/" target="_blank" rel="noopener" class="btn"> Share  🦈 </a> <br> <br>
+	</div>
 
 
 
@@ -127,8 +129,8 @@
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 
-
-<a href="#" style="color: white; border: 1px white solid; margin: 5px;">"Compare Discovery car insurance and Santam premiums online to secure affordable coverage, fast claims, and peace of mind while protecting your vehicle. 🚗🛡️💸",
+<div class="btext">
+<p>"Compare Discovery car insurance and Santam premiums online to secure affordable coverage, fast claims, and peace of mind while protecting your vehicle. 🚗🛡️💸",
 "Apply for a personal loan with FNB or Standard Bank after comparing interest rates and fees to choose the best repayment plan. 🏦💰📄",
 "Choose medical aid from Discovery or Momentum for comprehensive hospital coverage, chronic care, and wellness benefits to protect your family long term. 🏥💊👨‍👩‍👧‍👦",
 "Compare life insurance options at Old Mutual and Hollard to ensure income replacement, dependents’ financial security, and reliable claim payouts. ❤️🛡️📄",
@@ -156,7 +158,8 @@
 "Apply for secured loans at Capitec or Nedbank to obtain lower interest rates than unsecured options. 💰🏦📈",
 "Compare dealership trade-in offers at CMH or McCarthy for fair vehicle valuation before upgrading. 🚘📊💸",
 "Review credit card repayment structures from Absa or Capitec to prevent interest accumulation and maintain credit health. 💳📄💡",
-	</a>
+	</p>
+	</div>
 
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7523555661265068"
      crossorigin="anonymous"></script>
@@ -173,8 +176,8 @@
 
 
 
-
-<a href="#" style="color: white; border: 1px white solid; margin: 5px;">
+<div class="btext">
+<p>
 "Choose insurers offering roadside assistance such as Santam or OUTsurance for safety and convenience on South African roads. 🚗🛠️🛡️",
 "Use bond originators to compare multiple Nedbank and FNB mortgage offers without submitting separate applications. 🏠🏦📄",
 "Select medical aid plans with chronic benefits from Discovery or Momentum to protect long-term family healthcare. 🏥💊💰",
@@ -193,7 +196,8 @@
 "Review life insurance premium structures at Old Mutual or Hollard for long-term affordability. ❤️📄💰",
 "Compare health insurance hospital networks at Discovery or Momentum to access preferred facilities. 🏥🏨💊",
 "Use dealership service plans at Imperial or CMH to reduce long-term vehicle maintenance costs. 🚘🛠️💵",
-	</a>
+	</p>
+	</div>
 
 
 
@@ -211,8 +215,8 @@
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 
-
-<a href="#" style="color: white; border: 1px white solid; margin: 5px;">
+<div class="btext">
+<p>
 "Compare bank loan approval times from Nedbank or FNB to meet urgent financing needs efficiently. 🏦⏱️💰",
 "Select comprehensive insurance from Santam or OUTsurance to protect assets against unexpected financial loss. 🛡️🏡🚗",
 "Choose reputable banks like Standard Bank or Capitec for transparent lending and compliance. 🏦✅📄",
@@ -227,8 +231,8 @@
 "Review insurer customer support ratings at Discovery or Hollard to select reliable providers. 🛡️📄☎️",
 "Pre-approve car finance at Imperial or CMH to negotiate better vehicle prices at dealerships. 🚘🏦💸",
 "Compare life insurance riders at Old Mutual or Hollard to enhance coverage for illness or disability. ❤️🛡️📄"
-	</a>
-
+	</p>
+</div>
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7523555661265068"
      crossorigin="anonymous"></script>
 <!-- Moneymaker -->
@@ -312,6 +316,7 @@ if ('serviceWorker' in navigator) {
  				})
 	}
  </script>
+
 
 
 
