--- a/K53_Controls_Test/test_code.html
+++ b/K53_Controls_Test/test_code.html
@@ -58,25 +58,13 @@
 		<div class="ps">
 			<a href="heavy_vehicle_controls.html#p1"><img src="../img/truck.png"></a>
 		</div>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7523555661265068"
-     crossorigin="anonymous"></script>
-<!-- Moneymaker -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-7523555661265068"
-     data-ad-slot="7351075048"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 		</div>
 <br> <br>
 	<div class="btext">
 				<a href="./bursaries" class="btn">Bursaries 🎓</a> <a  href="https://wa.me/?text=Apply For Bursaries🎓 using this link freek53.xyz/bursaries" target="_blank" rel="noopener" class="btn"> Share  🦈</a> <br> <br>
 			<a href="./universities" class="btn">Open TVETs and Universities 👩‍🎓</a>  <a  href="https://wa.me/?text=Find Open TVETs and Universities👩‍🎓 using this link freek53.xyz/universities" target="_blank" rel="noopener" class="btn"> Share 🦈</a> <br> <br>
 			<a href="./jobs" class="btn">Jobs 👷‍♂️</a>  <a  href="https://wa.me/?text=Apply For Jobs👷‍♂️ using this link freek53.xyz/jobs" target="_blank" rel="noopener" class="btn"> Share  🦈 </a> <br> <br>
-		<a href="./index.html" class="btn">FREE K53 Learners License Memo 🚦🛣️</a>  <a  href="https://wa.me/?text=Download K53 Learners' License Memo 🚦🛣️ using this link freek53.xyz" target="_blank" rel="noopener" class="btn"> Share  🦈 </a> <br> <br>
+		<a href="./index.html" class="btn">K53 Learners License Memo 🚦🛣️</a>  <a  href="https://wa.me/?text=Download K53 Learners' License Memo 🚦🛣️ using this link freek53.xyz" target="_blank" rel="noopener" class="btn"> Share  🦈 </a> <br> <br>
 	</div>
 
 
@@ -268,3 +256,4 @@
 	}
 
  </script>
+
