--- a/K53_Book_Test/lightvehicle_book_tests.html
+++ b/K53_Book_Test/lightvehicle_book_tests.html
@@ -58,10 +58,10 @@
 	</div>
 <br> <br>
 	<div class="btext">
-				<a href="./bursaries" class="btn">Bursaries 🎓</a> <a  href="https://wa.me/?text=Apply For Bursaries🎓 using this link freek53.xyz/bursaries" target="_blank" rel="noopener" class="btn"> Share  🦈</a> <br> <br>
-			<a href="./universities" class="btn">Open TVETs and Universities 👩‍🎓</a>  <a  href="https://wa.me/?text=Find Open TVETs and Universities👩‍🎓 using this link freek53.xyz/universities" target="_blank" rel="noopener" class="btn"> Share 🦈</a> <br> <br>
-			<a href="./jobs" class="btn">Jobs 👷‍♂️</a>  <a  href="https://wa.me/?text=Apply For Jobs👷‍♂️ using this link freek53.xyz/jobs" target="_blank" rel="noopener" class="btn"> Share  🦈 </a> <br> <br>
-		<a href="./index.html" class="btn">FREE K53 Learners License Memo 🚦🛣️</a>  <a  href="https://wa.me/?text=Download K53 Learners' License Memo 🚦🛣️ using this link freek53.xyz" target="_blank" rel="noopener" class="btn"> Share  🦈 </a> <br> <br>
+				<a href="../bursaries" class="btn">Bursaries 🎓</a> <a  href="https://wa.me/?text=Apply For Bursaries🎓 using this link freek53.xyz/bursaries" target="_blank" rel="noopener" class="btn"> Share  🦈</a> <br> <br>
+			<a href="../universities" class="btn">Open TVETs and Universities 👩‍🎓</a>  <a  href="https://wa.me/?text=Find Open TVETs and Universities👩‍🎓 using this link freek53.xyz/universities" target="_blank" rel="noopener" class="btn"> Share 🦈</a> <br> <br>
+			<a href="../jobs" class="btn">Jobs 👷‍♂️</a>  <a  href="https://wa.me/?text=Apply For Jobs👷‍♂️ using this link freek53.xyz/jobs" target="_blank" rel="noopener" class="btn"> Share  🦈 </a> <br> <br>
+		<a href="../index.html" class="btn">K53 Learners License Memo 🚦🛣️</a>  <a  href="https://wa.me/?text=Download K53 Learners' License Memo 🚦🛣️ using this link freek53.xyz" target="_blank" rel="noopener" class="btn"> Share  🦈 </a> <br> <br>
 	</div>
 
 
@@ -221,6 +221,7 @@
  		lastScrollTop = scrollTop;
  	})
  </script>
+
 
 
 
