--- a/bursaries/index.html
+++ b/bursaries/index.html
@@ -12,6 +12,55 @@
     html,body{height:100%;margin:0;background:var(--bg);color:var(--text);
       font-family:Inter,system-ui,Arial,Helvetica,sans-serif;line-height:1.4;}
     .container{max-width:1100px;margin:24px auto;padding:16px;}
+    /* Wrapper */
+.btext {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 30px auto;
+    text-align: center;
+    gap: 14px;
+}
+
+/* Button style */
+.btext .btn {
+    display: inline-block;
+    width: 100%;
+    max-width: 320px;
+    padding: 12px 18px;
+    font-size: 15px;
+    font-weight: 600;
+    text-decoration: none;
+    border-radius: 8px;
+    background: #000;
+    color: #fff;
+    transition: all 0.25s ease;
+}
+
+/* Share buttons slightly different */
+.btext .btn:nth-child(even) {
+    background: #1a1a1a;
+}
+
+/* Hover effect */
+.btext .btn:hover {
+    background: #00c853;
+    color: #000;
+    transform: translateY(-2px);
+}
+
+/* Responsive spacing for line breaks */
+.btext br {
+    display: none;
+}
+
+/* Desktop improvement */
+@media (min-width: 768px) {
+    .btext {
+        max-width: 400px;
+    }
+}
     header{display:flex;align-items:center;justify-content:center;margin-bottom:18px;}
     header h1{margin:0;font-size:20px;color:var(--text);}
     .grid{display:grid;grid-template-columns:1fr;gap:12px;}
@@ -518,6 +567,7 @@ document.querySelectorAll(".niches").forEach(el => {
   el.textContent = randomAdvice;
 });
 </script>
+
 
 
 
