--- a/bursaries/index.html
+++ b/bursaries/index.html
@@ -480,22 +480,22 @@ function showFallback(parentEl){
     btext.className = 'btext';
 
     btext.innerHTML = `
-        <a href="./bursaries" class="btn">Bursaries 🎓</a>
+        <a href="../bursaries" class="btn">Bursaries 🎓</a>
         <a href="https://wa.me/?text=Apply For Bursaries🎓 using this link freek53.xyz/bursaries"
            target="_blank" rel="noopener" class="btn">Share 🦈</a>
         <br><br>
 
-        <a href="./universities" class="btn">Open TVETs and Universities 👩‍🎓</a>
+        <a href="../universities" class="btn">Open TVETs and Universities 👩‍🎓</a>
         <a href="https://wa.me/?text=Find Open TVETs and Universities👩‍🎓 using this link freek53.xyz/universities"
            target="_blank" rel="noopener" class="btn">Share 🦈</a>
         <br><br>
 
-        <a href="./jobs" class="btn">Jobs 👷‍♂️</a>
+        <a href="../jobs" class="btn">Jobs 👷‍♂️</a>
         <a href="https://wa.me/?text=Apply For Jobs👷‍♂️ using this link freek53.xyz/jobs"
            target="_blank" rel="noopener" class="btn">Share 🦈</a>
         <br><br>
 
-        <a href="./index.html" class="btn">FREE K53 Learners License Memo 🚦🛣️</a>
+        <a href="../index.html" class="btn">FREE K53 Learners License Memo 🚦🛣️</a>
         <a href="https://wa.me/?text=Download K53 Learners' License Memo 🚦🛣️ using this link freek53.xyz"
            target="_blank" rel="noopener" class="btn">Share 🦈</a>
         <br><br>
@@ -567,6 +567,7 @@ document.querySelectorAll(".niches").forEach(el => {
   el.textContent = randomAdvice;
 });
 </script>
+
 
 
 
