--- a/K53_Controls_Test/heavy_vehicle_controls.html
+++ b/K53_Controls_Test/heavy_vehicle_controls.html
@@ -1423,6 +1423,11 @@
       <a href="heavy_vehicle_controls.html">Time Over. Reload This Page</a>
     </div>
     <div  id="results4">
+	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank" style="text-decoration: none; margin-left: 20px;">
+    <button style="background-color: #25D366; color: white; border: none; padding: 10px 20px; border-radius: 5px; font-weight: bold; cursor: pointer;">
+      🚦Get the exact Code 10 January pdf Memo R100
+    </button>
+  </a>
       <a href="learn_heavyvehicle.html#p1" style="margin-right: 70px;"><button onclick="learn()">Learn</button></a>
       <a href="#"><button onclick="learn()">Skip</button></a>
     </div>
@@ -1876,6 +1881,7 @@ document.querySelectorAll(".niches").forEach(el => {
   el.textContent = randomAdvice;
 });
 </script>
+
 
 
 
