--- a/K53_Controls_Test/heavy_vehicle_controls.html
+++ b/K53_Controls_Test/heavy_vehicle_controls.html
@@ -1425,7 +1425,7 @@
     <div  id="results4">
 
       <a href="learn_heavyvehicle.html#p1" style="margin-right: 70px;"><button onclick="learn()">Learn</button></a>
-      <a href="#"><button onclick="learn()">Skip</button></a>
+      <a href="#"><button onclick="learn()">Skip</button></a> <br> <br>
 	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank">
     <button>
       🚦Get the exact January pdf Memo R100
@@ -1882,6 +1882,7 @@ document.querySelectorAll(".niches").forEach(el => {
   el.textContent = randomAdvice;
 });
 </script>
+
 
 
 
